2004-02-09  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.c (client_cal_opened_cb): don't add the clients to the
	internal hash/list here, just remove it if opening the calendar fails.
	(gnome_calendar_add_event_source): add the client to the internal
	hash/list here.

2004-02-09  Kidd Wang  <kidd.wang@sun.com>

	* gui/e-cal-model-tasks.c: (ecmt_set_value_at): refuse to update
	the task info if due date is before start date.

2004-02-05  JP Rosevear <jpr@ximian.com>

	* Convert the calendar_config_get_timezone and
	icaltimezone_get_builtin_timezone pair to just
	calendar_config_get_icaltimezone, this guarantees we will have
	some timezone

2004-02-05  JP Rosevear <jpr@ximian.com>

	* gui/calendar-config.h: add proto

	* gui/calendar-config.c (calendar_config_get_icaltimezone): return
	the icaltimezone based on the location and default to utc if we
	can't find one
	(calendar_config_get_hide_completed_tasks_sexp): use above

2004-02-05  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/cal-prefs-dialog.c (set_color_picker): make failure
	not so draconian - make the color black

	Fixes #53547
	
2004-02-05  Kidd Wang  <kidd.wang@sun.com>

	* gui/goto-dialog.glade: add a mnemonic for the 'Go to Today' button
	in the 'Go To Date' dialog.

2004-02-05  Sarfraaz Ahmed <asarfraaz@novell.com>

        Fixes #53388

        * gui/e-itip-control.c (get_next): added a check for NULL

2004-02-04  JP Rosevear <jpr@ximian.com>

	* importers/icalendar-importer.c (gnome_calendar_import_data_fn):
	use new cal auth functions

	* common/authentication.c (auth_new_cal_from_default): get a
	default calendar with auth

	* common/authentication.h: add proto

2004-02-04  JP Rosevear <jpr@ximian.com>

	* importers/icalendar-importer.c (importer_destroy_cb): we only
	have a single client to free
	(prepare_events): make the vtodo list optional
	(button_toggled_cb): handle the type of thing to import switching
	(primary_selection_changed_cb): handle the selected item switching