@@ -2,8 +2,6 @@ importersdir = $(privlibdir)/evolution-calendar-importers
 
 importers_LTLIBRARIES = libevolution-calendar-importers.la
 
-# privlibexec_PROGRAMS = evolution-calendar-importer
-
 INCLUDES = 						\
 	-DEVOLUTION_LOCALEDIR=\""$(localedir)"\"	\
 	-DEVOLUTION_SOUNDDIR=\""$(soundsdir)"\"		\
@@ -27,19 +25,6 @@ libevolution_calendar_importers_la_LIBADD = \
 	$(top_builddir)/e-util/libeutil.la 				\
 	$(top_builddir)/calendar/common/libevolution-calendarprivate.la	\
 	$(IMPORTERS_LIBS)
-
-# evolution_calendar_importer_SOURCES = 	\
-# 	evolution-calendar-importer.h	\
-# 	icalendar-importer.c		\
-# 	main.c
-#
-# evolution_calendar_importer_LDADD =				\
-# 	$(top_builddir)/shell/libeshell.la			\
-# 	$(top_builddir)/shell/importer/libevolution-importer.la \
-# 	$(top_builddir)/calendar/cal-util/libcal-util.la	\
-# 	$(top_builddir)/calendar/cal-client/libcal-client.la	\
-# 	$(top_builddir)/libwombat/libwombat.la			\
-# 	$(EVOLUTION_CALENDAR_LIBS)
 
 server_in_files = GNOME_Evolution_Calendar_Importer.server.in.in
 server_DATA = $(server_in_files:.server.in.in=_$(BASE_VERSION).server)
